--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "examples/*",
     "docs"
   ],
+  "types": "types/index.d.ts",
   "scripts": {
     "prettier": "prettier \"packages/**/{src,test,examples}/**/*.js\" --write",
     "prettier:docs": "prettier \"docs/**/*.{js,md}\" --write",
